home.html changes and colors

--- a/client_side/index.html
+++ b/client_side/index.html
@@ -56,7 +56,7 @@
     <div id="modal1" class="modal">
       <div class="modal-content lighten-5 z-depth-5">
         <!-- SignUp Form-->
-        <div class="brown-text text darken-2">
+        <div class="lime-text text-accent-2 text darken-2">
           <h5>Register</h5>
           <form ng-submit="su.submit()">
             <div class="input-field">
@@ -197,7 +197,7 @@
       <div class="modal-content lighten-5 z-depth-5">
 
         <!-- Patient Login Form -->
-        <div class="brown-text text darken-2">
+        <div class="lime-text text-accent-2 text darken-2">
           <h5>Patient Portal</h5>
           <form ng-submit="ln.submit()">
             <div class="row">
@@ -233,7 +233,7 @@
     <!--------------------------------->
     <!-- Pop Out Side Menu -->
     <div class="row grey darken-4 z-depth-5">
-      <div class="container brown-text text darken-2">
+      <div class="container lime-text text-accent-2 text darken-2">
         <ul id="slide-out" class="side-nav">
           <li><a href="#/products">Products</a></li>
           <li><a href="#/locations">Service Area</a></li>
