--- a/client_side/index.html
+++ b/client_side/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
+  <meta name="viewport" content="width=device-width; initial-scale=1.0 maximum-scale=1.0; user-scalable=0;" />
   <title>Kush Taxi</title>
   <!-- CSS STYLE SHEETS AND FONTS -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -50,7 +50,7 @@
   <!--------------------------------->
   <main>
     <!-- Modal Structure 1 -->
-    <div id="modal1" class="modal grey darken-4">
+    <div id="modal1" class="modal grey darken-4" style="z-index: 1003; display: none; opacity: 0; transform: scaleX(1.2); top: 0.869565px;">
       <div class="modal-content lighten-5 ">
         <!-- SignUp Form-->
         <div class="white-text">
@@ -190,7 +190,7 @@
     <!-- End Modal Structure 1 -->
 
     <!-- Modal Structure 2 -->
-    <div id="modal2" class="modal grey darken-4">
+    <div id="modal2" class="modal grey darken-4" style="z-index: 1003; display: none; opacity: 0; transform: scaleX(1.2); top: 0.869565px;">
       <div class="modal-content lighten-5 z-depth-5">
 
         <!-- Patient Login Form -->
